Define bond type in final loop over parameters

--- a/01-convert-benchmarkset.ipynb
+++ b/01-convert-benchmarkset.ipynb
@@ -455,15 +455,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      2 N2   (2   )      30 C2   (30  )     0.9572   553.0000\n",
-      "      2 N2   (n   )      30 C2   (c   )     0.9572   553.0000\n"
+      "      2 N2   (2   )      30 C2   (30  )     1.3350   490.0000\n",
+      "      2 N2   (n   )      30 C2   (c   )     1.3789   427.6000\n"
      ]
     }
    ],
@@ -476,6 +476,7 @@
     "        if smirnoff_atom1.name == 'N2' and smirnoff_atom2.name == 'C2':\n",
     "            atom1 = smirnoff_atom1\n",
     "            atom2 = smirnoff_atom2\n",
+    "            bond = smirnoff_bond\n",
     "            print(\n",
     "                f'{atom1.idx + 1:7d} {atom1.name:4} ({atom1.type:4}) {atom2.idx + 1:7d} '\n",
     "                f'{atom2.name:4} ({atom2.type:4}) {bond.type.req:10.4f} {bond.type.k:10.4f}'\n",
@@ -483,6 +484,7 @@
     "        if reference_atom1.name == 'N2' and reference_atom2.name == 'C2':\n",
     "            atom1 = reference_atom1\n",
     "            atom2 = reference_atom2\n",
+    "            bond = reference_bond\n",
     "            print(\n",
     "                f'{atom1.idx + 1:7d} {atom1.name:4} ({atom1.type:4}) {atom2.idx + 1:7d} '\n",
     "                f'{atom2.name:4} ({atom2.type:4}) {bond.type.req:10.4f} {bond.type.k:10.4f}'\n",
