Update imports to module

--- a/01-convert-benchmarkset.ipynb
+++ b/01-convert-benchmarkset.ipynb
@@ -25,8 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:16.323922Z",
+     "start_time": "2018-03-06T22:37:16.239331Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -49,7 +54,7 @@
     "from openforcefield.typing.engines.smirnoff import ForceField, unit\n",
     "from openforcefield.utils import mergeStructure\n",
     "\n",
-    "from utils import (create_pdb_with_conect, prune_conect, split_topology, create_host_guest_topology,\n",
+    "from smirnovert.utils import (create_pdb_with_conect, prune_conect, split_topology, create_host_guest_topology,\n",
     "                    create_host_mol2, convert_mol2_to_sybyl_antechamber,\n",
     "                    load_mol2, check_unique_atom_names,\n",
     "                    check_bond_lengths,\n",
@@ -65,8 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:16.412621Z",
+     "start_time": "2018-03-06T22:37:16.325376Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import logging\n",
@@ -82,8 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:16.507618Z",
+     "start_time": "2018-03-06T22:37:16.414078Z"
+    }
+   },
    "outputs": [],
    "source": [
     "test_case = 'cb7-1/'\n",
@@ -106,8 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:17.176960Z",
+     "start_time": "2018-03-06T22:37:16.509116Z"
+    }
+   },
    "outputs": [],
    "source": [
     "if not os.path.exists(destination):\n",
@@ -128,8 +148,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:17.487296Z",
+     "start_time": "2018-03-06T22:37:17.178518Z"
+    }
+   },
    "outputs": [],
    "source": [
     "reference = pmd.load_file(destination + reference_prmtop, xyz=destination + reference_inpcrd)\n",
@@ -145,14 +170,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:17.691898Z",
+     "start_time": "2018-03-06T22:37:17.489040Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 11:01:55 AM Creating ./tests/cb7-1/cb7-1.rst7 with CONECT records...\n"
+      "2018-03-06 02:37:17 PM Creating ./tests/cb7-1/cb7-1.pdb with CONECT records...\n"
      ]
     }
    ],
@@ -171,14 +201,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:17.778923Z",
+     "start_time": "2018-03-06T22:37:17.693626Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 11:02:12 AM Pruning water-water CONECT records...\n"
+      "2018-03-06 02:37:17 PM Pruning water-water CONECT records...\n"
      ]
     }
    ],
@@ -197,15 +232,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:18.971509Z",
+     "start_time": "2018-03-06T22:37:17.780560Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 11:02:26 AM Splitting topology into components...\n",
-      "2018-03-02 11:02:28 AM Creating a combined topology for the host and guest molecules...\n"
+      "2018-03-06 02:37:17 PM Splitting topology into components...\n",
+      "2018-03-06 02:37:18 PM Creating a combined topology for the host and guest molecules...\n"
      ]
     }
    ],
@@ -225,17 +265,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:19.211455Z",
+     "start_time": "2018-03-06T22:37:18.973783Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 11:03:09 AM Writing a `mol2` for the host molecule...\n",
-      "2018-03-02 11:03:09 AM Writing a `mol2` for the host molecule...\n",
-      "2018-03-02 11:03:09 AM Converting ./tests/cb7-1/CB7.mol2 to SYBYL atom types via Antechamber...\n",
-      "2018-03-02 11:03:09 AM Converting ./tests/cb7-1/MOL.mol2 to SYBYL atom types via Antechamber...\n"
+      "2018-03-06 02:37:19 PM Writing a `mol2` for the host molecule...\n",
+      "2018-03-06 02:37:19 PM Writing a `mol2` for the host molecule...\n",
+      "2018-03-06 02:37:19 PM Converting ./tests/cb7-1/CB7.mol2 to SYBYL atom types via Antechamber...\n",
+      "2018-03-06 02:37:19 PM Converting ./tests/cb7-1/MOL.mol2 to SYBYL atom types via Antechamber...\n"
      ]
     }
    ],
@@ -274,15 +319,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:20.606655Z",
+     "start_time": "2018-03-06T22:37:19.213407Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 11:50:20 AM Extracting water and ions from cb7-1.prmtop...\n",
-      "2018-03-02 11:50:20 AM Creating parameters for the waters and ions...\n"
+      "2018-03-06 02:37:19 PM Extracting water and ions from cb7-1.prmtop...\n",
+      "2018-03-06 02:37:19 PM Creating parameters for the waters and ions...\n"
      ]
     }
    ],
@@ -313,17 +363,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:20.640396Z",
+     "start_time": "2018-03-06T22:37:20.608512Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 11:51:57 AM Loading ./tests/cb7-1/CB7-sybyl.mol2...\n",
-      "2018-03-02 11:51:57 AM Loading ./tests/cb7-1/MOL-sybyl.mol2...\n",
-      "2018-03-02 11:51:57 AM Checking all atoms have unique names...\n",
-      "2018-03-02 11:51:57 AM Checking all atoms have unique names...\n"
+      "2018-03-06 02:37:20 PM Loading ./tests/cb7-1/CB7-sybyl.mol2...\n",
+      "2018-03-06 02:37:20 PM Loading ./tests/cb7-1/MOL-sybyl.mol2...\n",
+      "2018-03-06 02:37:20 PM Checking all atoms have unique names...\n",
+      "2018-03-06 02:37:20 PM Checking all atoms have unique names...\n"
      ]
     }
    ],
@@ -352,8 +407,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:21.485767Z",
+     "start_time": "2018-03-06T22:37:20.641865Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ff = ForceField('forcefield/smirnoff99Frosst.ffxml')\n",
@@ -373,14 +433,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:21.597315Z",
+     "start_time": "2018-03-06T22:37:21.487221Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 11:54:52 AM Checking structure for bonds >4 A...\n"
+      "2018-03-06 02:37:21 PM Checking structure for bonds >4 A...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Check if the host-guest parameter file already exists...\n",
+      "Check if the host-guest coordinate file already exists...\n"
      ]
     }
    ],
@@ -412,8 +485,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:21.910313Z",
+     "start_time": "2018-03-06T22:37:21.599429Z"
+    }
+   },
    "outputs": [],
    "source": [
     "water_and_ions = pmd.amber.AmberParm(\n",
@@ -430,9 +508,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:22.322554Z",
+     "start_time": "2018-03-06T22:37:21.911933Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Check if solvated parameter file already exists...\n",
+      "Check if solvated coordinate file already exists...\n"
+     ]
+    }
+   ],
    "source": [
     "merged = mergeStructure(hg_structure, water_and_ions)\n",
     "merged.box = reference.box\n",
@@ -455,8 +547,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:37:22.362494Z",
+     "start_time": "2018-03-06T22:37:22.324061Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
