--- a/02-convert-APR-files.ipynb
+++ b/02-convert-APR-files.ipynb
@@ -20,18 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:13.240701Z",
+     "start_time": "2018-03-06T22:38:12.479860Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -44,7 +40,7 @@
     "from openforcefield.typing.engines.smirnoff import ForceField, unit\n",
     "from openforcefield.utils import mergeStructure\n",
     "\n",
-    "from utils import (create_pdb_with_conect, prune_conect, split_topology, create_host_guest_topology,\n",
+    "from smirnovert.utils import (create_pdb_with_conect, prune_conect, split_topology, create_host_guest_topology,\n",
     "                    create_host_mol2, convert_mol2_to_sybyl_antechamber,\n",
     "                    load_mol2, check_unique_atom_names,\n",
     "                    check_bond_lengths,\n",
@@ -61,8 +57,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:13.264143Z",
+     "start_time": "2018-03-06T22:38:13.242181Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import logging\n",
@@ -78,8 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:13.382437Z",
+     "start_time": "2018-03-06T22:38:13.265569Z"
+    }
+   },
    "outputs": [],
    "source": [
     "test_case = 'a-bam-p/'\n",
@@ -101,8 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:13.802529Z",
+     "start_time": "2018-03-06T22:38:13.384025Z"
+    }
+   },
    "outputs": [],
    "source": [
     "reference = pmd.load_file(reference_destination + reference_prmtop, \n",
@@ -119,14 +130,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:13.871391Z",
+     "start_time": "2018-03-06T22:38:13.804068Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 12:21:20 PM Creating ./tests/a-bam-p/generated/full.pdb with CONECT records...\n"
+      "2018-03-06 02:38:13 PM Creating ./tests/a-bam-p/generated/full.pdb with CONECT records...\n"
      ]
     }
    ],
@@ -145,14 +161,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:13.930256Z",
+     "start_time": "2018-03-06T22:38:13.873090Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 12:21:41 PM Pruning water-water CONECT records...\n"
+      "2018-03-06 02:38:13 PM Pruning water-water CONECT records...\n"
      ]
     }
    ],
@@ -171,15 +192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:15.387725Z",
+     "start_time": "2018-03-06T22:38:13.931976Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 12:21:57 PM Splitting topology into components...\n",
-      "2018-03-02 12:21:58 PM Creating a combined topology for the host and guest molecules...\n"
+      "2018-03-06 02:38:13 PM Splitting topology into components...\n",
+      "2018-03-06 02:38:15 PM Creating a combined topology for the host and guest molecules...\n"
      ]
     }
    ],
@@ -199,17 +225,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:15.550210Z",
+     "start_time": "2018-03-06T22:38:15.389331Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 12:27:17 PM Writing a `mol2` for the host molecule...\n",
-      "2018-03-02 12:27:17 PM Writing a `mol2` for the host molecule...\n",
-      "2018-03-02 12:27:17 PM Converting ./tests/a-bam-p/generated/MGO.mol2 to SYBYL atom types via Antechamber...\n",
-      "2018-03-02 12:27:17 PM Converting ./tests/a-bam-p/generated/BAM.mol2 to SYBYL atom types via Antechamber...\n"
+      "2018-03-06 02:38:15 PM Writing a `mol2` for the host molecule...\n",
+      "2018-03-06 02:38:15 PM Writing a `mol2` for the host molecule...\n",
+      "2018-03-06 02:38:15 PM Converting ./tests/a-bam-p/generated/MGO.mol2 to SYBYL atom types via Antechamber...\n",
+      "2018-03-06 02:38:15 PM Converting ./tests/a-bam-p/generated/BAM.mol2 to SYBYL atom types via Antechamber...\n"
      ]
     }
    ],
@@ -248,17 +279,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:16.986276Z",
+     "start_time": "2018-03-06T22:38:15.552128Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 12:39:06 PM Extracting water and ions from ./tests/a-bam-p/original/full.topo...\n",
-      "2018-03-02 12:39:06 PM Creating parameters for the waters and ions...\n",
-      "2018-03-02 12:39:06 PM Writing a `frcmod` file for dummy atoms...\n",
-      "2018-03-02 12:39:06 PM Writing a `mol2` file for dummy atoms...\n"
+      "2018-03-06 02:38:15 PM Extracting water and ions from ./tests/a-bam-p/original/full.topo...\n",
+      "2018-03-06 02:38:15 PM Creating parameters for the waters and ions...\n",
+      "2018-03-06 02:38:15 PM Writing a `frcmod` file for dummy atoms...\n",
+      "2018-03-06 02:38:15 PM Writing a `mol2` file for dummy atoms...\n"
      ]
     }
    ],
@@ -289,17 +325,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:17.041916Z",
+     "start_time": "2018-03-06T22:38:16.987965Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 12:32:34 PM Loading ./tests/a-bam-p/generated/MGO-sybyl.mol2...\n",
-      "2018-03-02 12:32:34 PM Loading ./tests/a-bam-p/generated/BAM-sybyl.mol2...\n",
-      "2018-03-02 12:32:34 PM Checking all atoms have unique names...\n",
-      "2018-03-02 12:32:34 PM Checking all atoms have unique names...\n"
+      "2018-03-06 02:38:17 PM Loading ./tests/a-bam-p/generated/MGO-sybyl.mol2...\n",
+      "2018-03-06 02:38:17 PM Loading ./tests/a-bam-p/generated/BAM-sybyl.mol2...\n",
+      "2018-03-06 02:38:17 PM Checking all atoms have unique names...\n",
+      "2018-03-06 02:38:17 PM Checking all atoms have unique names...\n"
      ]
     }
    ],
@@ -328,8 +369,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:17.821570Z",
+     "start_time": "2018-03-06T22:38:17.044044Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ff = ForceField('forcefield/smirnoff99Frosst.ffxml')\n",
@@ -349,14 +395,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:17.943511Z",
+     "start_time": "2018-03-06T22:38:17.823189Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 12:34:01 PM Checking structure for bonds >4 A...\n"
+      "2018-03-06 02:38:17 PM Checking structure for bonds >4 A...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Check if the host-guest parameter file already exists...\n",
+      "Check if the host-guest coordinate file already exists...\n"
      ]
     }
    ],
@@ -388,8 +447,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:18.319433Z",
+     "start_time": "2018-03-06T22:38:17.945646Z"
+    }
+   },
    "outputs": [],
    "source": [
     "water_and_ions = pmd.amber.AmberParm(\n",
@@ -406,9 +470,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:18.689546Z",
+     "start_time": "2018-03-06T22:38:18.321023Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Check if solvated parameter file already exists...\n",
+      "Check if solvated coordinate file already exists...\n"
+     ]
+    }
+   ],
    "source": [
     "merged = mergeStructure(hg_structure, water_and_ions)\n",
     "merged.box = reference.box\n",
@@ -434,9 +512,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:18.715735Z",
+     "start_time": "2018-03-06T22:38:18.691105Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Check if reference pdb and mol2 files exist...\n",
+      "Check if target pdb and mol2 files exist...\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    reference.save(generated_destination + 'reference.pdb')\n",
@@ -460,16 +552,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:55.914623Z",
+     "start_time": "2018-03-06T22:38:18.717160Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 12:52:36 PM Loading ./tests/a-bam-p/generated/reference.mol2...\n",
-      "2018-03-02 12:52:36 PM Loading ./tests/a-bam-p/generated/target.mol2...\n",
-      "2018-03-02 12:52:36 PM Generating map between atoms...\n"
+      "2018-03-06 02:38:18 PM Loading ./tests/a-bam-p/generated/reference.mol2...\n",
+      "2018-03-06 02:38:18 PM Loading ./tests/a-bam-p/generated/target.mol2...\n",
+      "2018-03-06 02:38:18 PM Generating map between atoms...\n"
      ]
     }
    ],
@@ -489,16 +586,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-03-06T22:38:56.490195Z",
+     "start_time": "2018-03-06T22:38:55.916546Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-03-02 12:54:28 PM Loading ./tests/a-bam-p/generated/reference.pdb...\n",
-      "2018-03-02 12:54:28 PM Loading ./tests/a-bam-p/generated/target.pdb...\n",
-      "2018-03-02 12:54:28 PM Generating map between residues...\n"
+      "2018-03-06 02:38:55 PM Loading ./tests/a-bam-p/generated/reference.pdb...\n",
+      "2018-03-06 02:38:55 PM Loading ./tests/a-bam-p/generated/target.pdb...\n",
+      "2018-03-06 02:38:56 PM Generating map between residues...\n"
      ]
     }
    ],
